--- a/src/VRDrone.App/VRDrone.App.csproj
+++ b/src/VRDrone.App/VRDrone.App.csproj
@@ -122,8 +122,14 @@
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Helpers\APPCONTANTS.cs" />
     <Compile Include="Helpers\AudioCapturePermissions.cs" />
+    <Compile Include="Helpers\BoundingBoxRenderer.cs" />
     <Compile Include="Helpers\ComputerVisionService.cs" />
     <Compile Include="Helpers\EngineContainer.cs" />
+    <Compile Include="Helpers\FrameReaderFrameSource.cs" />
+    <Compile Include="Helpers\IFrameSource.cs" />
+    <Compile Include="Helpers\ImageFileFrameSource.cs" />
+    <Compile Include="Helpers\MediaPlayerFrameSource.cs" />
+    <Compile Include="Helpers\SkillHelper.cs" />
     <Compile Include="Helpers\SpeechHelper.cs" />
     <Compile Include="Helpers\TagCommands.cs" />
     <Compile Include="MainPage.xaml.cs">
@@ -159,6 +165,9 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.AI.Skills.Vision.ObjectDetector">
+      <Version>1.1.0-preview</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.Azure.CognitiveServices.Vision.ComputerVision">
       <Version>6.0.0</Version>
     </PackageReference>
